--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flag"
-version = "1.0.1"
-authors = ["matt.limb17@gmail.com <matt.limb17@gmail.com>"]
+version = "2.0.0"
+authors = ["Matt Limb <matt.limb17@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 colored_truecolor = "0.1.0"
 clap = "2.33.0"
+yaml-rust = "0.4"
